<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <Button
    android:id="@+id/btnRequestAccess"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:backgroundTint="#aab591"
    android:text="@string/request_access" />

  <ImageView
    android:id="@+id/img_broccoli"
    android:layout_width="100dp"
    android:layout_height="100dp"
    android:src="@drawable/ic_broccoli"
    app:layout_constraintBottom_toTopOf="@+id/tvHeading"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/tvSubheading"
    style="@style/TextAppearance.Material3.BodyLarge"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/msg_app_is_invite_only"
    android:textAlignment="center" />

  <TextView
    android:id="@+id/tvHeading"
    style="@style/TextAppearance.Material3.DisplaySmall"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/app_name" />


  <androidx.constraintlayout.helper.widget.Flow
    android:layout_width="0dp"
    android:layout_height="match_parent"
    android:paddingHorizontal="@dimen/default_margin"
    app:constraint_referenced_ids="tvHeading,tvSubheading,btnRequestAccess"
    app:flow_maxElementsWrap="1"
    app:flow_verticalGap="@dimen/default_margin"
    app:flow_verticalStyle="packed"
    app:flow_wrapMode="chain"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
